# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  19 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Only launch sulogin if we are actually in single user mode, #158615.

* baselayout-1.13.0_alpha10 (12 Dec 2006)

  18 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Reverted patch for #104869 as it's silly. Fixes #158174.

    Use LC_ALL=C for sort, #158328 thanks to Mike Frysinger.

    Match wireless encryption key reported against *, #158319 thanks to
    Robert Wolf.

    Replace tac with sed '1!G;h;$!d' as tac is in /usr, #158312.

    Use the FreeBSD protcols file on Linux as it's a lot more descriptive.

  14 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Stop providing the NVdriver alias, #158099.

    Fix routes and lo correctly, #157965.

  13 Dec 2006; Mike Frysinger <vapier@gentoo.org>:

    Move /sbin/modules-update to the module-init-tools package.

* baselayout-1.13.0_alpha9 (12 Dec 2006)

  12 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Assume all routes are host routes unless we have a valid netmask,
    #157418 thanks to Alexander Zubkov.

    Fix --nicelevel in rc-daemon.sh, #157847 thanks to Sven Wegner.

    sysvinit now provides shutdown.sh and reboot.sh, #112991.

    Add dev-zero's patch for start-stop-daemon fd redirection, but with a few
    bits from Iain Buchanan on bug #138409.

  09 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Fix the stopping of services when using --name or --retry.

    Don't unmount anything inside of /proc like nfs or usb.

    Don't start USE services unless they are in the runlevel, #157589.

  09 Dec 2006; Mike Frysinger <vapier@gentoo.org>:

    Add a new TIMEZONE variable to /etc/conf.d/clock so we can track the
    timezone setting of /etc/localtime properly.

    Punt /etc/init.d/{reboot,shutdown}.sh to the sysvinit package.

* baselayout-1.13.0_alpha8 (07 Dec 2006)
